--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A mineflayer plugin for automatic chat text translation",
   "main": "index.js",
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "readme-md-generator": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
