update op input

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A mineflayer plugin for automatic chat text translation",
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/translate": "^6.2.2",
     "dotenv": "^10.0.0",
     "readme-md-generator": "^1.0.0"
   },
